vit/vit-backend-django-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vit-backend-django-prod-deploy
spec:
  selector:
    matchLabels:
      app: vit-backend-django-prod-deploy
  template:
    metadata:
      labels:
        app: vit-backend-django-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3000"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: vit-backend-django-prod-deploy
          image: ldamasio/vit-backend-django-prod:latest
          ports:
          - containerPort: 8000
          resources:
            requests:
              memory: "1000Mi"
              cpu: "750m"
            limits:
              memory: "1000Mi"
              cpu: "1500m"
