vit/vit-frontend-prod-ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vit-frontend-prod-ing
  annotations:
    cert-manager.io/cluster-issuer: "vit-frontend-prod-clusterissuer"
    spec.ingressClassName: "public"
spec:
  ingressClassName: "public"
  tls:
  - hosts:
    - vitapet.rbxrobotica.com.br
    secretName: vit-frontend-prod-secret
  rules:
  - host: vitapet.rbxrobotica.com.br
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: vit-frontend-prod-svc
            port:
              number: 80
